Update AR marker and model in index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <a-scene embedded arjs="sourceType: webcam;">
 
-  <a-marker type="pattern" url="antropo_sen.patt">
+  <a-marker type="pattern" url="pattern-numb.patt">
 
     <a-entity
-      gltf-model="kraldetaylar.glb"
+      gltf-model="beyinsizasimetrik.glb"
       scale="0.8 0.8 0.8"
       position="0 5 0"
       rotation="0 0 0">
@@ -26,6 +26,7 @@
 
 </body>
 </html>
+
 
 
 
