--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <title>Numb AR</title>
+
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
 
 <body style="margin:0; overflow:hidden;">
 
-<a-scene embedded arjs="sourceType: webcam;">
+<a-scene
+  embedded
+  arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+  renderer="logarithmicDepthBuffer: true;"
+>
 
   <a-marker type="pattern" url="pattern-numb.patt">
 
     <a-entity
       gltf-model="beyinsizasimetrik.glb"
-      scale="0.8 0.8 0.8"
-      position="0 5 0"
-      rotation="0 0 0">
+      scale="0.3 0.3 0.3"
+      position="0 0 0"
+      rotation="-90 0 0">
     </a-entity>
 
   </a-marker>
@@ -26,6 +33,8 @@
 
 </body>
 </html>
+
+
 
 
 
