Add lighting to AR scene in index.html
Added ambient and directional light entities to the scene.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <a-scene
   embedded
   arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
-  renderer="logarithmicDepthBuffer: true;"
->
+  renderer="logarithmicDepthBuffer: true;">
+  
+<a-entity light="type: ambient; intensity: 1.4"></a-entity>
+<a-entity light="type: directional; intensity: 1.2" position="1 1 0"></a-entity>
 
   <a-marker type="pattern" url="pattern-numb.patt">
 
@@ -33,6 +35,7 @@
 
 </body>
 </html>
+
 
 
 
