--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       gltf-model="beyinsizasimetrik.glb"
       scale="0.15 0.15 0.15"
       position="0 3 0"
-      rotation="0 0 0">
+      rotation="0 0 0"
+      material="roughness: 0.8;>
     </a-entity>
 
   </a-marker>
@@ -35,6 +36,7 @@
 
 </body>
 </html>
+
 
 
 
