Fix HTML formatting and remove extra lines

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       scale="0.15 0.15 0.15"
       position="0 3 0"
       rotation="0 0 0"
-      material="roughness: 0.8;>
+      material="roughness: 0.8;"
+      material="roughness: 0.8;">
     </a-entity>
 
   </a-marker>
@@ -36,6 +37,7 @@
 
 </body>
 </html>
+
 
 
 
