--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <a-marker type="pattern" url="pattern-numb.patt">
 
     <a-entity
-      gltf-model="beyinsizasimetrik.glb"
+      gltf-model="numb.glb"
       scale="0.15 0.15 0.15"
       position="0 2.6 0.3"
       rotation="0 0 0"
@@ -36,6 +36,7 @@
 
 </body>
 </html>
+
 
 
 
