--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <a-marker type="pattern" url="pattern-numb.patt">
 
     <a-entity
-      gltf-model="n.glb"
+      gltf-model="numb.glb"
       scale="0.15 0.15 0.15"
       position="0 2.6 0.3"
       rotation="0 0 0"
@@ -33,6 +33,7 @@
 
 </body>
 </html>
+
 
 
 
