--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script>
+if (/iPhone|iPad|iPod/i.test(navigator.userAgent)) {
+  window.location.href = "beyinsizasimetrik.usdz";
+}
+</script> 
   <meta charset="utf-8">
   <title>Numb AR</title>
 
@@ -33,6 +38,7 @@
 
 </body>
 </html>
+
 
 
 
