--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <script>
 if (/iPhone|iPad|iPod/i.test(navigator.userAgent)) {
-  window.location.href = "beyinsizasimetrik.usdz";
+  window.location.href = "numb.usdz";
 }
 </script> 
   <meta charset="utf-8">
@@ -38,6 +38,7 @@ if (/iPhone|iPad|iPod/i.test(navigator.userAgent)) {
 
 </body>
 </html>
+
 
 
 
